--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
             .test-grid {
                 gap: 20px;
                 margin-bottom: 40px;
+                grid-template-columns: 1fr;
             }
 
             .test-card {
@@ -277,6 +278,25 @@
 
             .feature-grid {
                 gap: 20px;
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .feature-item h3 {
+                font-size: 16px;
+            }
+
+            .feature-item p {
+                font-size: 12px;
+            }
+
+            .feature-icon {
+                font-size: 28px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .feature-grid {
+                grid-template-columns: 1fr;
             }
         }
 
